--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,7 +117,7 @@ select {
 }
 
 @mixin type-color($color) {
-    background-color: $color;
+    background-color: $color !important;
 }
 
 .type-I {
@@ -259,8 +259,6 @@ select {
     margin-bottom: 20px;
     font-family: $font-family;
     float: left;
-    display: block;
-    clear: both; 
 
     label {
         display: block;
